# computerGraphics

./: README.md
Assignment1/: CMakeLists.txt  README.html  README.md  main.cpp
Assignment1/include/: image.h  line_segments.h
Assignment1/source/: image_todo.cpp  line_segments.cpp
